--- a/src/pages/home/components/ourServices/style.scss
+++ b/src/pages/home/components/ourServices/style.scss
@@ -8,51 +8,69 @@
 
 
 .our_services_title {
-  padding-top: 133px;
+  //padding-top: calc(50px + (133 - 50) * ((100vw - 320px) / (1680 - 320)));
+
 
 
   h3 {
     color: $black;
-    font-size: calc($fontSize20 + 31 * (100vw / 1920));
     font-style: normal;
     font-weight: 400;
-    line-height: calc($fontSize20 + 31 * (100vw / 1920));
+    font-size: $fontSize100;
     text-transform: uppercase;
     max-width: 1197px;
     background-color: white;
 
+    @include adaptive-font(45 , 30 )
   }
 
   p {
     margin: 26px 0 0;
     color: $red;
-    font-size: calc($fontSize14 + 16 * (100vw / 1920));
+    font-size: calc($fontSize17 + 30 * (100vw / 1920));
     font-style: italic;
     font-weight: 300;
-    line-height: calc($fontSize14 + 16 * (100vw / 1920));
+    line-height: calc($fontSize17 + 16 * (100vw / 1920));
     background-color: white;
+    @include adaptive-font(35 , 25 )
+
   }
+  @include adaptive-value("padding-top",200 ,50 , 1 )
 
 }
 
 .our_services_content {
-  margin-top: 90px;
 
   &.active {
     background-color: red;
   }
+  @media screen  and (max-width: $md2 + px){
+     max-width: 800px;
+    width: 100%;
+    margin: 0 auto;
+  }
+  @include adaptive-value("margin-top",90 ,50 , 1 )
+
 }
-
-
 
 .our_services_content_item {
   display: flex;
   justify-content: space-between;
-  gap: 89px;
-  margin: 150px 0 0 ;
   align-items: center;
+  @media screen  and (max-width: $md3 + px){
+    flex-direction: column;
+  }
+  @include adaptive-value("margin-top",150 ,50 , 1 );
+  @include adaptive-value("gap",90 ,50 , 1 )
+
+}
 
 
+
+.our_services_content_item:nth-child(2){
+  @media screen  and (max-width: $md3 + px){
+    flex-direction: column-reverse;
+  }
 }
 .our_services_content_item .content_item_text:nth-child(2) {
   flex: inherit;
@@ -66,39 +84,35 @@
 
   h3 {
     color: $black;
-    font-size: calc(25px + 55 * (100vw / 1920));
     font-style: normal;
     font-weight: 400;
-    line-height: 154.3%; /* 114.182px */
     text-transform: uppercase;
-    position: relative;
+    text-decoration: underline;
+    text-underline-offset: 8px;
+    text-decoration-thickness: 3px;
+    text-decoration-color: $red;
+    @include adaptive-font(75 , 40 );
+    @include adaptive-value( "line-height" , 100 , 40 , 1);
 
-    &::before {
-      content: '';
-      position: absolute;
-      width: 20%;
-      height: 2px;
-      background-color: $red;
-      bottom: 10px;
-
-    }
   }
 
   p {
-    margin: 52px 0 0;
+    //margin-top: calc(10px + (40 - 10) * ((100vw - 320px) / (1680 - 320)));
     color: $black;
     text-align: justify;
-    font-size: calc(15px + 15 * (100vw / 1920));
+    font-size: calc(13px + 15 * (100vw / 1920));
     font-style: normal;
     font-weight: 400;
     line-height: calc(15px + 17 * (100vw / 1920));
     max-width: 623px;
     background-color: white;
+    @include adaptive-font(22 , 12 );
+    @include adaptive-value("margin-top" ,40 , 10,1)
 
   }
 
   span {
-    margin: 52px 0 0;
+    margin-top: calc(10px + (50 - 10) * ((100vw - 320px) / (1680 - 320)));
     color: $black;
     text-align: justify;
     font-size: calc(15px + 15 * (100vw / 1920));
@@ -111,8 +125,6 @@
 
   }
 }
-
-
 
 .content_image_body {
   position: relative;
