--- a/src/pages/blog/components/blogItem/style.scss
+++ b/src/pages/blog/components/blogItem/style.scss
@@ -1,21 +1,31 @@
 @import "src/assets/variables";
+@import "src/assets/@mixin";
 
 .blog_item {
-
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 
 
 }
 .blog_item_image {
+  display: flex;
+  align-items: center;
+  position: relative;
 
+
+}
+.blog_item_text_content{
+   max-width: 540px;
 }
 
 .blog_item_title {
   color: #000;
-  font-size: $fontSize45;
   font-style: normal;
   font-weight: 400;
-  line-height: 45px;
-  margin-top: 30px;
+  @include adaptive-font(45,28);
+  @include adaptive-value("margin-top",30,19,0);
+  @include adaptive-value("line-height",45,27,0)
 
 }
 
@@ -24,7 +34,6 @@
 .blog_item_utils {
   display: flex;
   justify-content: space-between;
-  margin-top: 36px;
 
   .blog_item_data {
     color: $black;
@@ -33,50 +42,59 @@
     font-weight: 400;
     line-height: normal;
     text-transform: uppercase;
+    @include adaptive-font(17,11)
+
   }
 
   .blog_item_name {
     color: $red;
-    font-size: $fontSize17;
     font-style: normal;
     font-weight: 400;
     line-height: normal;
     text-transform: uppercase;
+    @include adaptive-font(17,11)
+
   }
 
   .blog_item_info {
     color: rgba(25, 25, 35, 0.45);
-    font-size: $fontSize17;
     font-style: normal;
     font-weight: 400;
     line-height: normal;
     text-transform: uppercase;
+    @include adaptive-font(17,11)
+
   }
+  @include adaptive-value("margin-top",36,20,0)
+
 }
 
 .blog_item_description {
   margin-top: 48px;
   color: $black;
-  font-size: 22px;
   font-style: normal;
   font-weight: 400;
   line-height: normal;
+  @include adaptive-font(22,13);
+  @include adaptive-value("margin-top",48,30,0)
+
 
 }
 .blog_item_route{
-  margin-top: 30px;
   display: flex;
   justify-content: flex-end;
 
   a{
     background: none;
-    color: #8D1038;
-    text-align: right;
-    font-size: $fontSize26;
+    color: $red;
     font-style: normal;
     font-weight: 400;
     line-height: 41px; /* 40.443px */
     text-transform: uppercase;
+    @include adaptive-font(26,11)
+
   }
+  @include adaptive-value("margin-top",30,20,0)
+
 
 }
