--- a/src/pages/blog/components/blogItemDetails/style.scss
+++ b/src/pages/blog/components/blogItemDetails/style.scss
@@ -1,7 +1,15 @@
 @import "src/assets/variables";
+@import "src/assets/@mixin";
 
 .blog_item_details {
-  padding: 30px 0 0;
+  padding-top: 60px;
+  @media (max-width: $md3+ px) {
+     padding-top: 50px;
+
+    @include adaptive-value("padding-top",50,22 ,0);
+
+  }
+
 }
 
 .blog_details_header {
@@ -13,10 +21,8 @@
   h3 {
     color: $black;
     text-align: center;
-    font-size: $fontSize54;
     font-style: normal;
     font-weight: 400;
-    line-height: 55px; /* 55px */
     text-transform: uppercase;
     max-width: 800px;
     position: relative;
@@ -36,56 +42,79 @@
       width: 30%;
 
     }
+    @include adaptive-value("line-height", 54, 22, 0);
+    @include adaptive-font(54,22);
+
   }
 }
 
 .blog_details_subTitle {
-  margin: 46px 0 0;
   display: flex;
   gap: 50px;
 
   p{
     color: rgba(25, 25, 35, 0.45);
-
-    font-size:$fontSize24;
     font-style: normal;
     font-weight: 400;
     line-height: normal;
     text-transform: uppercase;
   }
+  @include adaptive-font(24,12);
+  @include adaptive-value("gap", 50, 20, 0);
+  @include adaptive-value("margin-top", 46, 20, 0);
 
 }
 
 .blog_details_content {
   margin-top: 80px;
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
   gap: 30px;
+  @include adaptive-value("margin-top", 80, 20, 0);
+
+  @media (max-width: $md2 + px) {
+    flex-direction: column-reverse;
+
+
+  }
+
 }
 
 .blog_details_content_text {
 
 
 }
+.blog_details_content_image{
+   
+
+}
 
 .details_content_text_title {
 
   h3{
-    color: #000;
-    font-size:$fontSize45;
+    color: $black;
     font-style: normal;
     font-weight: 400;
     line-height: normal;
     text-decoration-line: underline;
+
+    @include adaptive-font(45,18);
+
   }
   p {
     color: $black;
    margin: 20px 0 0 ;
-    font-size: $fontSize22;
     font-style: normal;
     font-weight: 400;
     line-height: normal;
     max-width: 819px;
+    @include adaptive-font(22,18);
+    @media (max-width: $md2 + px) {
+      max-width: 100%;
+
+    }
+
   }
 }
 .blog_details_text_row2,.blog_details_text_row3{
@@ -93,23 +122,30 @@
 
   h3{
     color: #000;
-
-    font-size:$fontSize33;
     font-style: normal;
     font-weight: 400;
     line-height: normal;
     text-decoration-line: underline;
+    text-underline-offset: 5px;
+
+    @include adaptive-font(33,18);
 
   }
 
   p{
     color: $black;
     margin: 30px 0 0 ;
-    font-size: $fontSize22;
     font-style: normal;
     font-weight: 400;
     line-height: normal;
+    @include adaptive-font(22,18);
+    @include adaptive-value("margin-top",30,15,0);
+
+
   }
+
+  @include adaptive-value("margin-top",50,20,0);
+
 }
 .share_blog{
    display: flex;
@@ -117,6 +153,7 @@
   align-items: center;
   margin-top: 82px;
 
+  @include adaptive-value("margin-top",82,22,0);
 
 
 }
@@ -140,20 +177,30 @@
   align-items: center;
 }
 .similar_blog{
-margin-top: 130px;
+
+  @include adaptive-value("margin-top",130,60,0);
 
 }
 .similar_blog_title{
   color: #000;
-  font-size: $fontSize45;
   font-style: normal;
   font-weight: 400;
   line-height: normal;
   text-transform: uppercase;
+  @include adaptive-font(45,22)
 }
 .similar_blog_list{
-   margin-top: 82px;
    display: grid;
   gap: 32px;
   grid-template-columns: repeat(3 , 1fr);
+  @include adaptive-value("margin-top",82,26,0);
+  
+  @media (max-width: 1299px) {
+     overflow-x: scroll;
+
+    .blog_item{
+      min-width: 400px;
+    }
+  }
+
 }
