--- a/src/pages/blog/style.scss
+++ b/src/pages/blog/style.scss
@@ -1,14 +1,26 @@
 @import "src/assets/variables";
+@import "src/assets/@mixin";
 
-.blog_list_container {
+.blog_section {
   margin-top: 146px;
+  @include adaptive-value("margin-top", 146, 50, 1)
 }
 
 .blog_list {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  gap: 32px;
-  column-gap: 30px;
+
+  @media (max-width: 1187px) {
+    grid-template-columns: repeat(2, 1fr);
+
+  }
+  @media (max-width: 667px) {
+    grid-template-columns: repeat(1, 1fr);
+
+  }
+  @include adaptive-value("column-gap", 30, 15, 0);
+  @include adaptive-value("gap", 30, 15, 0)
+
 }
 
 .blog_list_sequence {
@@ -16,6 +28,12 @@
   display: flex;
   align-items: center;
   justify-content: center;
+
+  @include adaptive-value("margin-top", 160, 40, 0);
+  @media (max-width: $md4 + px) {
+    display: none;
+  }
+
 }
 
 .sequence_numbers {
@@ -54,30 +72,55 @@
   cursor: pointer;
   transition: .3s;
 
-    &.active{
-      &::before {
-        content: '';
-        position: absolute;
-        width: 28px;
-        height: 28px;
-        background-color: $red;
-        border-radius: 50%;
-        transition: .3s;
-      }
-
-      span {
-        position: relative;
-        z-index: 1;
-        color: #FFF;
-        font-size: $fontSize12;
-        font-style: normal;
-        font-weight: 600;
-        line-height: normal;
-        transition: .3s;
-
-      }
+  &.active {
+    &::before {
+      content: '';
+      position: absolute;
+      width: 28px;
+      height: 28px;
+      background-color: $red;
+      border-radius: 50%;
+      transition: .3s;
     }
 
+    span {
+      position: relative;
+      z-index: 1;
+      color: #FFF;
+      font-size: $fontSize12;
+      font-style: normal;
+      font-weight: 600;
+      line-height: normal;
+      transition: .3s;
+
+    }
+  }
 
 
 }
+.blog_list_sequence_mobil_btn {
+  align-items: center;
+  justify-content: center;
+  display: none;
+
+  button {
+    padding: 12px 50px 12px;
+    color: $white;
+    text-align: center;
+    font-size: $fontSize12;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 26px;
+    text-transform: uppercase;
+    background: $backgroundGradient;
+    border-radius: 4px;
+
+    &:hover {
+      @include buttonHover
+    }
+  }
+  @media (max-width: $md4 + px) {
+   display: flex;
+  }
+}
+
