--- a/src/pages/career/components/rolesItem/style.scss
+++ b/src/pages/career/components/rolesItem/style.scss
@@ -4,10 +4,17 @@
 .career_roles_item{
    display: flex;
   justify-content: space-between;
+  gap: 30px;
   border-radius: 2px;
   border: 1px solid #000;
-  padding: 50px;
-  margin: 50px 0 0 ;
+  @include adaptive-value("padding",50,10 , 1);
+  @include adaptive-value("margin-top",50,20 , 1);
+
+  @media (max-width: 995px) {
+      flex-direction: column;
+  }
+
+
 }
 
 .roles_item_texts{
@@ -18,15 +25,25 @@
     font-style: normal;
     font-weight: 400;
     line-height: normal;
+    @include adaptive-font(45,14)
+
   }
   p{
     color: $black;
-    font-size: $fontSize24;
     font-style: normal;
     font-weight: 400;
     line-height: normal;
     margin-top: 35px;
     max-width: 1100px;
+    @media (max-width: 1539px) {
+      max-width: 800px;
+    }
+    @media (max-width: 1219px) {
+      max-width: 600px;
+    }
+    @include adaptive-font(24,12);
+
+    @include adaptive-value("margin-top",35,10 , 1)
   }
 }
 .roles_item_tolls{
@@ -35,6 +52,11 @@
   align-items: center;
   justify-content: space-between;
 
+  @media (max-width: 995px) {
+    flex-direction: initial;
+
+  }
+
 
 }
 .roles_item_icon{
@@ -42,6 +64,16 @@
   justify-content: flex-end;
   width: 100%;
   cursor: pointer;
+  @media (max-width: 995px) {
+     justify-content: inherit;
+    width: auto;
+   }
+  @media (max-width: $md3 + px) {
+     img{
+        width: 60%;
+       height: 60%;
+     }
+  }
 }
 .roles_item_route{
   a{
@@ -49,7 +81,6 @@
     background: $backgroundGradient;
     color: $white;
     border-radius: 2px;
-    font-size: $fontSize22;
     font-style: normal;
     font-weight: 400;
     line-height: 33px; /* 33.946px */
@@ -59,5 +90,12 @@
       @include buttonHover
 
     }
+    @media (max-width: $md3 + px) {
+      padding: 10px 20px;
+
+    }
+    @include adaptive-font(22,15);
+    @include adaptive-value("line-height",33,25 , 1)
+
   }
 }
