--- a/src/pages/career/style.scss
+++ b/src/pages/career/style.scss
@@ -1,7 +1,9 @@
 @import "src/assets/variables";
+@import "src/assets/@mixin";
 
 .careers_open_roles {
-  margin-top: 143px;
+  @include adaptive-value("margin-top",143,50 , 1);
+
 }
 
 .open_roles_title {
@@ -11,17 +13,12 @@
   font-weight: 400;
   line-height: 45px; /* 45px */
   text-transform: uppercase;
-  position: relative;
+  text-decoration: underline;
+  text-underline-offset: 8px;
+  text-decoration-thickness: 2px;
+  text-decoration-color: $red;
 
-  &::before {
-    width: 7%;
-    height: 1px;
-    position: absolute;
-    content: '';
-    background: $red;
-    bottom: -10px;
 
-  }
 }
 .open_roles_list{
    margin-top: 40px;
