--- a/src/pages/components/animationHeader/style.scss
+++ b/src/pages/components/animationHeader/style.scss
@@ -4,6 +4,8 @@
 .animate_top_section {
   background: $backgroundGradient;
   overflow: hidden;
+  position: relative;
+  margin: -30px 0;
   @media screen and (min-width: $md3+px) {
     display: flex;
   }
@@ -11,65 +13,62 @@
 
 .top_section_text_block {
   flex: 0 0 100%;
-  margin-top: 159px;
-  //display: flex;
-  //
-  //.G-container{
-  //   display: flex;
-  //  align-items: center;
-  //}
+
 }
 
 .animation_text_content {
-  padding: 0 0 243px ;
+  //padding: 140px 0 243px ;
   width: 50%;
   h3 {
     color: $white;
-    font-size: $fontSize90;
     font-style: normal;
     font-weight: 400;
-    line-height: 140px; /* 138.87px */
     position: relative;
+    text-decoration: underline;
+    text-underline-offset: 8px;
+    text-decoration-thickness: 2px;
+    text-decoration-color: $white1;
 
-    &::before {
-      width: 17%;
-      height: 1px;
-      position: absolute;
-      content: '';
-      background: $white1;
-      bottom: 20px;
-      left: 5px;
+    @include adaptive-font(90,40);
+    @include adaptive-value("line-height",140,60,1);
 
-    }
+
   }
 
   p {
     color: $white;
-    font-size: $fontSize45;
     font-style: normal;
     font-weight: 400;
     line-height: 54px; /* 54px */
     margin-top: 30px;
     max-width: 800px;
 
+    @include adaptive-font(45,22);
+    @include adaptive-value("line-height",54,26,1);
+    @include adaptive-value("margin-top",30,15,1);
+
+    @media (max-width: $md2 + px) {
+      max-width: 500px;
+    }
+  }
+  @media (max-width: $md2 + px) {
+    width: 100%;
 
   }
+  @include adaptive-value("padding-top",170,50,1);
+  @include adaptive-value("padding-bottom",150,63,1)
+
 }
 .animation_header_image {
+  position: absolute;
+  right: -600px;
+  top: -200px;
 
-  @media screen and (min-width: $md3+px) {
-    flex: 0 0 50%;
-    transform: translate(-100% , 0);
-  }
 
   img{
-    width: 100%;
-    height: 100%;
+    max-width: none;
+    max-height: none;
     animation: pulse 10s linear infinite;
-  }
-  .animation_img{
-    width: 100%;
-    height: 100%;
   }
 
 
