--- a/src/pages/footer/style.scss
+++ b/src/pages/footer/style.scss
@@ -1,8 +1,8 @@
 @import "src/assets/variables";
+@import "src/assets/@mixin";
 
 .footer {
  padding:  91px 0 0 ;
-  margin-top: 200px;
   position: relative;
 
 
@@ -16,11 +16,17 @@
     background-color: $black;
     transition: 3s;
 
+    @media (max-width: $md1 + px) {
+       display: none;
+    }
   }
   &.active::before{
     width: 100%;
 
   }
+  @include adaptive-value("margin-top", 200, 50, 0);
+  @include adaptive-value("padding", 91, 50, 0)
+
 }
 
 .footer_container {
@@ -31,18 +37,48 @@
 }
 
 .footer_content {
-  display: grid;
-  grid-template-columns: repeat(5, auto);
-  grid-column-start: auto;
+  display: flex;
+  @media screen and (max-width: 1039px){
+   flex-direction: column;
+     align-items: center;
+    gap: 30px;
+  }
+}
+.footer_menu_block{
+   flex: 1 1 100%;
+  display: flex;
+  gap: 30px;
 
+  @media screen and (max-width: 1039px){
+   width: 100%;
+  }
+  @media (max-width: 587px) {
+    flex-direction: column;
+  }
+}
+.footer_logo{
+   flex:  0 0 25%;
+  display: flex;
+  @media (max-width: 587px) {
+    width: 100%;
+    justify-content: flex-start;
 
+  }
+}
+.footer_contact{
+  @media (max-width: 587px) {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    justify-content: flex-start;
+
+  }
 }
 
-.footer_logo {
-}
+
 
 .footer_menu_row1, .footer_menu_row2, .footer_menu_row3 {
-
+ flex: 1 1 50%;
   ul {
     li {
       a {
@@ -61,13 +97,20 @@
       }
     }
   }
+
+  @media screen and (max-width: 1039px){
+    flex: 1 1 100%;
+    align-items: center;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    @media (max-width: 587px) {
+      justify-content: flex-start;
+
+    }
+  }
 }
 
-.footer_contact {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-end;
-}
 
 .footer_contact_icons {
   display: flex;
