--- a/src/pages/header/style.scss
+++ b/src/pages/header/style.scss
@@ -15,25 +15,76 @@
 
 .header_content {
   display: flex;
-
   align-items: center;
+
 
 }
 
 .header_logo {
-  flex: 1 1  144px;
-  padding:  37px 0;
+  flex: 1 1 144px;
+  padding: 37px 0;
 
+  @media screen and (max-width: $md2 + px) {
+    padding: 20px 0;
 
+  }
+
+  @media screen and (max-width: $md3 + px) {
+    padding: 10px 0;
+
+  }
+
+  @media screen and (max-width: $md4 + px) {
+    img{
+       width: 35%;
+      height: 35%;
+    }
+
+  }
 }
 
 .header_menu {
   flex: 1 1 auto;
+
+  @media screen and (max-width: $md1 + px) {
+    position: fixed;
+    right: -100%;
+    top: 0;
+    opacity: 0;
+    visibility: hidden;
+    transition: .3s;
+    width: 100%;
+
+
+    &.active{
+      right: 0;
+      opacity: 1;
+      visibility: visible;
+
+    }
+    nav{
+      ul{
+        display: flex;
+        flex-direction: column;
+
+      }
+    }
+
+  }
+
+
 }
 
 .header_download {
   display: flex;
   gap: 43px;
+  @media screen and (max-width: $md1 + px) {
+    position: fixed;
+    left: 0;
+    top: 0;
+    opacity: 0;
+    visibility: hidden;
+  }
 }
 
 .header_language {
@@ -56,10 +107,10 @@
   color: $red;
 
 }
-.header_language_de{
+
+.header_language_de {
   color: black;
 }
-
 
 
 .header_download_btn {
@@ -79,7 +130,6 @@
 
   }
 }
-
 
 
 .header_download_btn_white {
@@ -121,4 +171,85 @@
     @include buttonHover
   }
 }
+.burger_menu{
+   display: none;
+}
+@media screen and (max-width: $md1 + px) {
+  .burger_menu {
+    position: relative;
+    width: 70px;
+    height: 30px;
+    cursor: pointer;
+    display: block;
+
+
+    &::after {
+      content: '';
+      width: 100%;
+      height: 2px;
+      background-color: black;
+      position: absolute;
+      top: 0;
+      right: 0;
+      transition: .3s;
+      @media screen and (max-width: $md4 + px) {
+        width: 90%;
+
+      }
+
+    }
+    &.active::after{
+        transform: translateY(12px) rotate(45deg);
+    }
+
+    span {
+      display: block;
+      width: 80%;
+
+      height: 2px;
+      background-color: black;
+      position: absolute;
+      top: 13px;
+      right: 0;
+      transition: .3s;
+
+      @media screen and (max-width: $md4 + px) {
+         top: 11px;
+        width: 70%;
+
+      }
+    }
+
+    &::before {
+      content: '';
+      width: 60%;
+      height: 2px;
+      position: absolute;
+      bottom: 0;
+      right: 0;
+      background-color: black;
+      @media screen and (max-width: $md4 + px) {
+        width: 50%;
+
+      }
+      transition: .3s;
+
+    }
+    &.active::before{
+      transform: translateY(-12px) rotate(-45deg);
+      width: 90%;
+    }
+    &.active span{
+      transform: scaleX(0);
+
+    }
+    @media screen and (max-width: $md4 + px) {
+      height: 25px;
+
+    }
+
+  }
+
+}
+
 
