--- a/src/pages/home/components/consultation/style.scss
+++ b/src/pages/home/components/consultation/style.scss
@@ -2,15 +2,24 @@
 @import "../../../../assets/@mixin";
 
 .consultation_section {
-  //margin-top: 104px;
   background: var(--hover, linear-gradient(180deg, #8D1038 0%, #191923 100%));
-
+  @media screen and (max-width: $md1 + px){
+    margin-top: 50px;
+  }
 }
 
 .consultation_body {
   padding: 70px 0 30px;
   border-radius: 4px;
   display: flex;
+  gap: 40px;
+
+  @media screen  and (max-width: $md2 + px){
+      flex-direction: column;
+  }
+  @media screen  and (max-width: $md3 + px){
+    padding: 30px 0 30px;
+  }
 }
 
 .consultation_text {
@@ -23,29 +32,31 @@
     color: $white;
     font-style: normal;
     font-weight: 400;
-    line-height: 72px; /* 62px */
     text-transform: uppercase;
     max-width: 607px;
     flex: 1 1 auto;
+    font-size: calc($fontSize20 + 60 * (100vw / 1680));
 
-
-    @include adaptive_fontSize(20px, 42)
+    @include adaptive-font(62,40);
+    @include adaptive-value("line-height",60,40,1)
   }
 
   a {
     color: #FFF;
     font-family: Barlow Condensed;
-    font-size: 28px;
     font-style: normal;
     font-weight: 400;
     line-height: 100%; /* 28px */
     text-transform: uppercase;
     display: flex;
     align-items: center;
+    @include adaptive-font(28,16);
 
 
   }
-
+  @media screen  and (max-width: $md2 + px){
+    flex: 1 1 198px;
+  }
 }
 
 .form_title {
@@ -56,6 +67,8 @@
     font-style: normal;
     font-weight: 400;
     line-height: 100%; /* 32px */
+    @include adaptive-font(32,18);
+
   }
 }
 
@@ -64,10 +77,11 @@
 
   span {
     color: #FFF;
-    font-size: $fontSize22;
     font-style: normal;
     font-weight: 400;
     line-height: 154.3%; /* 33.946px */
+    @include adaptive-font(22,12);
+
   }
 
   input {
@@ -77,17 +91,16 @@
 
     &::placeholder {
       color: #191923;
-      font-size: 22px;
       font-style: normal;
       font-weight: 400;
       line-height: 154.3%; /* 33.946px */
+      @include adaptive-font(22,12);
+
     }
 
   }
 
-  select {
 
-  }
 
   span {
     color: #FFF;
@@ -96,6 +109,7 @@
     font-style: normal;
     font-weight: 400;
     line-height: 154.3%; /* 33.946px */
+    @include adaptive-font(22,12);
   }
 
 }
@@ -116,7 +130,17 @@
       background-position: right center;
       background-size: 30px;
       padding: 10px;
+
+      @media screen  and (max-width: $md3 + px){
+        width: 100%;
+        margin: 0 0  10px;
+
+      }
     }
+    @media screen  and (max-width: $md3 + px){
+     flex-direction: column;
+    }
+
   }
 }
 
@@ -164,6 +188,10 @@
   input[type="checkbox"] {
     display: none;
   }
+  p{
+    @include adaptive-font(20,15);
+
+  }
 }
 
 
@@ -178,6 +206,10 @@
   font-weight: 400;
   line-height: 154.3%; /* 33.946px */
   text-transform: uppercase;
+  @media screen  and (max-width: $md3 + px){
+    padding: 14px 100px;
+  }
+  @include adaptive-font(22,15);
 
 }
 
