--- a/src/pages/home/components/partners/style.scss
+++ b/src/pages/home/components/partners/style.scss
@@ -2,7 +2,8 @@
 @import "../../../../assets/@mixin";
 
 .partners_section {
-  margin-top: 102px;
+  @include adaptive-value("margin-top",102 ,50,1);
+
 }
 
 .partners_title {
@@ -12,20 +13,14 @@
   flex-direction: column;
 }
 
-.partners_title h3 {
-  position: relative;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background-color: white;
-  @include adaptive_fontSize(50px, 50);
-  @include adaptive_lineHeight(50px, 50);
-  @include h3_title();
-}
-
 .partners_title {
   h3 {
     position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: white;
+    font-size: calc($fontSize20 + 80 * (100vw / 1680));
 
     &::before {
       content: '';
@@ -41,6 +36,13 @@
       width: 50%;
 
     }
+    @include h3_title();
+    @include adaptive-value("line-height",100 ,40,1);
+    @media (max-width: $maxWidthContainer + px){
+      @include adaptive-font(100,40);
+      @include adaptive-value("line-height",100,40,1)
+
+    }
   }
 
 }
@@ -48,13 +50,13 @@
 .partners_title p {
   color: $black;
   text-align: center;
-  font-size: 22px;
   font-style: normal;
   font-weight: 400;
-  line-height: 27px;
   margin: 40px 0 0;
   max-width: 1044px;
   background-color: white;
+  @include adaptive-font(22,18);
+  @include adaptive-value("line-height",27,21,1)
 
 
 }
@@ -66,6 +68,12 @@
   margin: 35px 0 0;
   gap: 5px;
 
+  @media screen  and (max-width: $md1 + px){
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+  @include adaptive-value("margin-top",35 , 16,1)
+
 
 }
 
@@ -76,7 +84,7 @@
   border-radius: 2.198px;
   border: 1.099px solid #191923;
   background-color: white;
-  width: 10%;
+  width: 150px;
   min-height: 58px;
 
   img {
