--- a/src/pages/home/components/portfolio/style.scss
+++ b/src/pages/home/components/portfolio/style.scss
@@ -2,13 +2,13 @@
 @import "../../../../assets/@mixin";
 
 .services_portfolio {
-  margin-top: 110px;
-}
-
-
-.services_portfolio_body{
+  //margin-top: 110px;
+  margin-top: calc(50px + (110 - 50) * ((100vw - 320px) / (1680 - 320)));
 
 }
+
+
+
 .services_portfolio_title {
   display: flex;
   align-items: center;
@@ -21,7 +21,6 @@
     display: flex;
     justify-content: center;
     background: white;
-
     &::before {
       content: '';
       position: absolute;
@@ -37,20 +36,20 @@
 
     }
 
-    @include adaptive_fontSize(50px, 50);
-    @include adaptive_lineHeight(50px, 50);
     @include h3_title();
+    @include adaptive-font(100,40);
+    @include adaptive-value("line-height",100,40,1)
   }
 
   p {
     color: #191923;
     text-align: center;
-    font-size: $fontSize22;
     font-style: normal;
     font-weight: 400;
-    line-height: 26px;
     margin: 30px 0 0;
     max-width: 1044px;
+    @include adaptive-font(22,18);
+    @include adaptive-value("line-height",27,21,1)
 
   }
 
@@ -60,6 +59,12 @@
 .services_portfolio_items {
   display: flex;
   margin-top: 41px;
+
+
+
+  @media screen  and (max-width: 1503px){
+      overflow-x: scroll;
+  }
 
 
 }
@@ -79,9 +84,9 @@
 
 
   h3 {
+
     color: $white;
     text-align: center;
-    font-size: $fontSize33;
     font-style: normal;
     font-weight: 500;
     line-height: normal;
@@ -109,6 +114,7 @@
         width: 50%;
      }
     }
+    @include adaptive-font(32,24);
   }
 
   p {
@@ -120,6 +126,8 @@
     font-style: normal;
     font-weight: 400;
     line-height: 21px;
+    @include adaptive-font(20,14);
+
   }
 
   span {
@@ -144,7 +152,9 @@
     line-height: 26px;
     color: white;
   }
-
+  @media screen  and (max-width: 1503px){
+    min-width: 270px;
+  }
 }
 .services_portfolio_item:hover{
   background: var(--hover, linear-gradient(180deg, #8D1038 0%, #191923 100%));
@@ -159,6 +169,9 @@
   align-items: center;
   justify-content: center;
   gap: 41px;
+  @media screen  and (max-width: $md3 + px){
+    flex-direction:column;
+  }
 }
 
 .portfolio_tools_red_button {
@@ -178,6 +191,10 @@
 
   &:hover {
     @include buttonHover
+  }
+  @media screen  and (max-width: $md3 + px){
+    padding: 15px 47px;
+
   }
 }
 
