--- a/src/pages/home/components/telefonSales/style.scss
+++ b/src/pages/home/components/telefonSales/style.scss
@@ -3,63 +3,44 @@
 
 
 
-
 .our_telephone_sales_section {
   background: $backgroundGradient;
   padding: 10px 0 20px 0;
-  margin-top: 110px;
   position: relative;
   z-index: 10;
 
+  @include adaptive-value("margin-top",110 ,50,1);
+
 }
 
-.telephone_middle_border {
-  position: relative;
-  min-height: 110px;
 
-  &::before {
-    position: absolute;
-    content: '';
-    width: 2px;
-    height: 0;
-    background-color: black;
-    transition: 3s;
-    left: 50.4%;
-
-
-  }
-
-  &.active {
-    &::before {
-      height: 100%;
-    }
-  }
-}
 .our_telephone_sales_content {
-
+ padding:  0 10px;
 
   h3 {
     color: $white;
     text-align: center;
-    //font-size: $fontSize54;
-    font-size: calc($fontSize20 + 34 * (100vw / 1920));
     font-style: normal;
     font-weight: 400;
-
     line-height: calc(20px + 65 * (100vw / 1920));
-
     text-transform: uppercase;
+    @include adaptive-value("line-height",73 ,30,1);
+    @include adaptive-font(54,20);
 
   }
 
   span {
     color: $white;
     text-align: center;
-    font-size: 30px;
+    font-size: calc($fontSize20 + 34 * (100vw / 1680));
     font-style: normal;
     font-weight: 400;
     line-height: 47px;
     text-transform: uppercase;
     display: block;
+    @include adaptive-font(30,10);
+    @include adaptive-value("line-height",47 ,20,1);
+
+
   }
 }
