--- a/src/pages/home/components/testimonials/style.scss
+++ b/src/pages/home/components/testimonials/style.scss
@@ -2,31 +2,31 @@
 @import "../../../../assets/@mixin";
 
 .testimonials_section {
-  margin-top: 141px;
-
+  @include adaptive-value("margin-top",145 ,50,1)
 
 }
 
-.testimonials_logo_block{
- margin-top: 20px;
+.testimonials_logo_block {
+  margin-top: 20px;
 }
-.testimonials_logo_block{
+
+.testimonials_logo_block {
   position: absolute;
   left: -70px;
   top: 0;
   background-color: white;
 
-  img{
-      width: 70%;
+  img {
+    width: 70%;
     height: 70%;
     object-fit: cover;
     animation: logo 4s infinite linear;
 
   }
 }
-.testimonials_rotate_logo{
 
-}
+
+
 .testimonials_body {
   position: relative;
   display: flex;
@@ -35,32 +35,43 @@
   justify-content: center;
 
   .arrow-right {
-    right: 0;
+    right: -30px;
     position: absolute;
-    margin-top: 62px;
-    font-size: $fontSize33;
-    width: 60px;
-    height: 60px;
     cursor: pointer;
-    bottom: 210px;
-
-
+    z-index: 1;
+    display: flex;
+    justify-content: flex-end;
 
     img {
-      width: 100%;
-      height: 100%;
-      object-fit: contain;
-
+      @media screen and (max-width: $md4 + px) {
+        width: 50%;
+        height: 50%;
+      }
+    }
+    @media screen and (max-width: $md3 + px) {
+      right: 0;
     }
   }
 
   .arrow-left {
-    left: 0;
+    left: -30px;
     position: absolute;
     font-size: $fontSize33;
-    margin-top: 62px;
     cursor: pointer;
-    bottom: 210px;
+    z-index: 1;
+    display: flex;
+    justify-content: flex-start;
+
+    img {
+      @media screen and (max-width: $md4 + px) {
+        width: 50%;
+        height: 50%;
+      }
+    }
+    @media screen and (max-width: $md3 + px) {
+      left: 0;
+    }
+
 
   }
 
@@ -112,8 +123,9 @@
       display: block;
     }
 
-    @include adaptive_fontSize(20px, 32);
     @include h3_title();
+    @include adaptive-font(52,40);
+    @include adaptive-value("line-height",50,40,1)
 
   }
 
@@ -132,12 +144,15 @@
 .testimonials_clients_slider {
   position: relative;
   margin-top: 62px;
+  display: flex;
+  align-items: center;
+
 
 }
 
 
 .testimonials_slider_item {
-  min-width: 582px;
+  max-width: 582px;
   min-height: 153.261px;
   border-radius: 4px;
   cursor: pointer;
@@ -145,15 +160,17 @@
   display: flex;
   padding: 30px;
   align-items: center;
+  justify-content: center;
   gap: 30px;
-  border: 1px solid ;
+  border: 1px solid;
+  margin: 0 auto;
 
 
   p {
-    margin: 30px 0 0;
     color: $black;
+    margin-top: calc(10px + (30 - 10) * ((100vw - 320px) / (1680 - 320)));
 
-    font-size: 26px;
+    font-size: calc($fontSize12 + 12 * (100vw / 1520));
     font-style: italic;
     font-weight: 400;
     line-height: 100%; /* 26px */
@@ -164,10 +181,9 @@
 
   h3 {
     color: $red;
-    font-size: $fontSize24;
+    font-size: calc($fontSize17 + 8 * (100vw / 1520));
     font-style: normal;
     font-weight: 400;
-    line-height: 37px;
     text-transform: uppercase;
     max-width: 334px;
 
@@ -197,11 +213,33 @@
 
   }
 
+  @media screen and (max-width: $md1 + px) {
+    max-width: 500px;
+    margin: 0 auto;
+    padding: 20px;
+
+  }
+  @media screen and (max-width: $md2 + px) {
+    max-width: 400px;
+    margin: 0 auto;
+
+  }
+  @media screen and (max-width: $md3 + px) {
+    max-width: 350px;
+    margin: 0 auto;
+
+  }
+  @media screen and (max-width: $md4 + px) {
+    max-width: 250px;
+    margin: 0 auto;
+    padding: 15px;
+    min-height: 100px;
+  }
 }
 
 
 .testimonials_more_btn {
-  margin-top: 60px;
+  margin-top: calc(20px + (60 - 20) * ((100vw - 320px) / (1680 - 320)));
   width: 100%;
   display: flex;
   align-items: center;
@@ -221,10 +259,11 @@
     line-height: 154.3%; /* 33.946px */
     background: $backgroundGradient;
 
-    &:hover{
+    &:hover {
       @include buttonHover
 
     }
+
   }
 
   &::after {
@@ -236,6 +275,11 @@
     transition: 3s;
     top: -60px;
     left: 20%;
+
+    @media screen and (max-width: $md1 + px) {
+      display: none;
+
+    }
   }
 
   &.active::after {
@@ -244,10 +288,3 @@
   }
 }
 
-.testimonials_clients_slider {
-
-  @media screen and (max-width: 1500px){
-    max-width: 1000px;
-    margin: 0 auto;
-  }
-}
