--- a/src/pages/home/style.scss
+++ b/src/pages/home/style.scss
@@ -2,12 +2,16 @@
 @import "src/assets/@mixin";
 
 
-.svg_line_block{
-   margin-left: 40px;
-   position: absolute;
+.svg_line_block {
+
+  margin-left: 40px;
+  position: absolute;
   left: 0;
   top: 0;
-   margin-top: 200px;
+  margin-top: 200px;
+  @media screen and (max-width: 1484px) {
+    display: none;
+  }
 }
 
 .section_telephone_sales {
@@ -17,6 +21,7 @@
 
 .section_telephone_sales_content {
   position: relative;
+
   &::before {
     content: '';
     position: absolute;
@@ -26,6 +31,14 @@
     height: 1px;
     background-color: $black;
     transition: 3s;
+
+    @media screen and (max-width: $md1 + px) {
+      top: 80px;
+
+    }
+    @media screen and (max-width: $md3 + px) {
+      display: none;
+    }
   }
 
   &.active::before {
@@ -41,9 +54,17 @@
     height: 100px;
     background-color: $black;
     transition: 3s;
+
+    @media screen and (max-width: 1484px) {
+      right: 70px;
+    }
+    @media screen and (max-width: $md3 + px) {
+      display: none;
+    }
   }
 
 }
+
 .telephone_sales_body {
   position: relative;
 
@@ -53,44 +74,107 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  flex-wrap: wrap;
   gap: 20px;
-  padding: 132px 0 0;
 
+  @media screen and (max-width: $md3 + px) {
+    flex-direction: column;
+  }
+  @media screen and (max-width: $md3 + px) {
+    @include adaptive-value("padding-top",70,30,0)
 
+  }
+  @media screen and (max-width: $md4 + px) {
+    @include adaptive-value("padding-top",40,30,0)
+
+  }
+  @include adaptive-value("padding-top",100,50,1)
 }
 
 .telephone_sales_text {
-  padding: 30px 0 0 0;
+  padding: 10px 0 0 0;
   position: relative;
 
   h1 {
-    font-size: calc($fontSize20 + 80 * (100vw / 1920));
-    max-width: 624px;
     color: $black;
-    font-style: normal;
+    font-size: 100px;
+    max-width: 624px;
     font-weight: 400;
-    line-height: calc($fontSize24 + 76 * (100vw / 1920));
     text-transform: uppercase;
-  }
+    @media screen  and (max-width: $maxWidthContainer + px){
+      @include adaptive-font(100,40);
+      @include adaptive-value("line-height",100 , 40 , 0)
+    }
 
+  }
   p {
     color: $black;
-    font-size: calc($fontSize17 + 33 * (100vw / 1920));
     font-style: italic;
     font-weight: 300;
-    line-height: calc(15px + 33 * (100vw / 1920));
     text-transform: capitalize;
     margin: 18px 0 0;
     max-width: 513px;
+    @media screen  and (max-width: $maxWidthContainer + px){
+      @include adaptive-font(50,20);
+      @include adaptive-value("line-height",50 ,20, 0)
+    }
+  }
+
+  &::before{
+    content: '';
+    position: absolute;
+    right: -20px;
+    bottom: -20px;
+    width: 50%;
+    height: 1px;
+    background-color: black;
+    display: none;
+
+    @media screen  and (max-width: $md3 + px){
+      display: block;
+
+    }
+  }
+
+}
+
+.excellence-btn {
+  padding: 16px 70px 16px;
+  color: $white;
+  text-align: center;
+  font-size: calc($fontSize14 + 14 * (100vw / 1920));
+  font-style: normal;
+  font-weight: 400;
+  line-height: 154.3%; /* 43.204px */
+  text-transform: uppercase;
+  background: $backgroundGradient;
+  border-radius: 4px;
+  margin: 60px 0 0;
+  @media screen and (max-width: 1494px) {
+    margin: calc(20px + (60 - 20) * ((100vw - 320px) / (1494 - 320))) 0 0;
 
   }
 
-  button {
+  &:hover {
+    @include buttonHover
+  }
+
+  @media screen and (max-width: $md3 + px) {
+    display: none;
+  }
+
+}
+
+.excellence-btn_mobile {
+  display: none;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  position: relative;
+  button{
     padding: 16px 70px 16px;
     color: $white;
     text-align: center;
-    font-size: calc($fontSize14 + 14 * (100vw / 1920));
+    font-size: calc($fontSize12 + 14 * (100vw / 1920));
     font-style: normal;
     font-weight: 400;
     line-height: 154.3%; /* 43.204px */
@@ -98,42 +182,67 @@
     background: $backgroundGradient;
     border-radius: 4px;
     margin: 60px 0 0;
-    @media screen and (max-width: 1494px) {
-      margin: calc(20px + (60 - 20) * ((100vw - 320px) / (1494 - 320))) 0 0;
-
-    }
 
     &:hover {
       @include buttonHover
     }
-  }
-
-  @media screen and (max-width: 1494px) {
-    padding-top: calc(20px + (42 - 20) * ((100vw - 320px) / (1494 - 320)));
 
   }
+&::before{
+  content: '';
+   position: absolute;
+  top: 0;
+  left: 0;
+  width: 75%;
+  height: 1px;
+  background-color: black;
 
 }
+  @media screen and (max-width: $md3 + px) {
+    display:flex;
+  }
+}
+
 
 .telephone_sales_img {
   margin-right: 55px;
   transition: .3s;
-
+  position: relative;
   &.hover {
     transform: rotate(20deg) scale(.9);
   }
+  @media screen and (max-width: $md3 + px) {
+    margin-right: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    &::before{
+       position: absolute;
+      content: '';
+      width: 1px;
+      height: 70%;
+      background-color: black;
+      left: 0;
+      bottom: 0;
+    }
+    &::after{
+       content: '';
+      position: absolute;
+       width: 1px;
+      height: 40%;
+      background-color: black;
+      right: 0;
+      top: 0;
+    }
+  }
+
 }
 
 
 
-
-․home_ellipse_large {
-  max-width: 140px;
-  max-height: 140px;
-  width: 100%;
-  height: 100%;
-
-}
 
 .home_ellipse_img {
   display: flex;
@@ -151,6 +260,8 @@
   justify-content: center;
   margin-top: 50px;
   position: relative;
+
+
 
   &::before {
     position: absolute;
@@ -186,6 +297,10 @@
 
     }
   }
+  @media screen and (max-width: $md3 + px) {
+    display: none;
+
+  }
 }
 
 .home_ellipse_large {
@@ -198,7 +313,7 @@
   background-color: white;
   transition: .3s;
   position: relative;
-  animation: pulse 3s infinite;
+  animation: shadow 3s infinite;
 
 }
 
@@ -210,7 +325,7 @@
   align-items: center;
   justify-content: center;
   position: absolute;
-  animation: pulse 3s infinite;
+  animation: shadow 3s infinite;
 
 }
 
@@ -221,11 +336,11 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  animation: pulse 3s infinite;
+  animation: shadow 3s infinite;
 
 }
 
-@keyframes pulse {
+@keyframes shadow {
   0% {
     box-shadow: 0 0 50px rgba(185, 18, 84, 0.10); /* Start shadow properties */
     transition: .3s;
@@ -258,6 +373,12 @@
   }
 }
 
+.section_rotate_logo{
+  @media screen  and (max-width: $md3 + px){
+    display: none;
+
+  }
+}
 
 .rotate_logo_block {
   min-height: 100px;
@@ -270,7 +391,7 @@
   top: 0;
   background-color: white;
 
-  img{
+  img {
     width: 70%;
     height: 70%;
     object-fit: cover;
@@ -279,7 +400,6 @@
   }
 
 }
-
 
 
 @keyframes logo {
