--- a/src/pages/home/components/portfolio/style.scss
+++ b/src/pages/home/components/portfolio/style.scss
@@ -107,7 +107,9 @@
       bottom: -10px;
       transition: 3s;
 
-
+      @media (max-width: $md4 + px) {
+          display: none;
+      }
     }
     &.active{
      &::before{
@@ -115,6 +117,11 @@
      }
     }
     @include adaptive-font(32,24);
+    @media (max-width: $md4 + px) {
+      padding: 50px 5px 0;
+
+    }
+
   }
 
   p {
@@ -135,10 +142,12 @@
     color: white;
     padding: 0 17px;
     text-align: center;
-    font-size: $fontSize24;
     font-style: normal;
     font-weight: 400;
     line-height: 26px;
+    @include adaptive-font(24,18);
+    @include adaptive-value("margin-top",33,20,1);
+
 
   }
 
@@ -146,14 +155,23 @@
     margin: 33px 0 0;
     padding: 0 17px 80px;
     text-align: center;
-    font-size: $fontSize24;
     font-style: normal;
     font-weight: 400;
     line-height: 26px;
     color: white;
+    @include adaptive-font(24,18);
+    @include adaptive-value("margin-top",33,20,1);
+
   }
   @media screen  and (max-width: 1503px){
     min-width: 270px;
+    padding: 0 0 40px;
+
+  }
+  @media (max-width: $md4 + px) {
+    min-width: 240px;
+    min-height: 0;
+
   }
 }
 .services_portfolio_item:hover{
@@ -172,6 +190,9 @@
   @media screen  and (max-width: $md3 + px){
     flex-direction:column;
   }
+  @include adaptive-value("margin-top",53,20,1);
+  @include adaptive-value("gap",41,17,1);
+
 }
 
 .portfolio_tools_red_button {
@@ -181,10 +202,9 @@
   color: $white;
   text-align: center;
   font-family: Barlow Condensed;
-  font-size: 22px;
   font-style: normal;
   font-weight: 400;
-  line-height: 154.3%; /* 33.946px */
+  line-height: 33px;
   text-transform: uppercase;
 
 
@@ -196,17 +216,22 @@
     padding: 15px 47px;
 
   }
+  @include adaptive-font(28,22);
+  @include adaptive-value("line-height",33,20,1);
+
 }
 
 .portfolio_tools_white_button {
   background: $white;
   color: $black;
-  font-size: 28px;
   font-style: normal;
   font-weight: 400;
   line-height: 28px; /* 28px */
   text-transform: uppercase;
   display: flex;
   align-items: center;
+  @include adaptive-font(28,22);
+  @include adaptive-value("line-height",33,20,1);
+
 }
 
