--- a/src/pages/home/components/partners/style.scss
+++ b/src/pages/home/components/partners/style.scss
@@ -26,10 +26,12 @@
       content: '';
       position: absolute;
       width: 0;
-      height: 2px;
+      height: 1px;
       background-color: $red;
       bottom: -10px;
       transition: 3s;
+
+
     }
 
     &.active::before {
@@ -52,11 +54,11 @@
   text-align: center;
   font-style: normal;
   font-weight: 400;
-  margin: 40px 0 0;
   max-width: 1044px;
   background-color: white;
   @include adaptive-font(22,18);
-  @include adaptive-value("line-height",27,21,1)
+  @include adaptive-value("line-height",27,21,1);
+  @include adaptive-value("margin-top",40,21,1)
 
 
 }
@@ -92,6 +94,16 @@
     width: 100%;
     height: 100%;
     padding: 0 30px;
+
+  }
+  @media (max-width: $md4 + px){
+    width: 100px;
+
+    img {
+
+      padding: 0 20px;
+
+    }
 
   }
 
